# blueprint-engine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PLAN_GCP.md  README.md  REFACTORING_PLAN.md
.github/workflows/: ci.yml
bp/examples/basics/: 06_cfg_comprehensive.bp  06_cfg_lib.bp
bp/tests/: test_match.bp  test_pattern_types.bp  test_sets.bp
bp/tests/import/: nested_a.bp  nested_b.bp  test_import.bp  test_nested_import.bp  test_nested_isolation.bp
crates/blueprint-engine-core/: Cargo.toml
crates/blueprint-engine-core/src/: context.rs  error.rs  lib.rs  package.rs  permissions.rs
crates/blueprint-engine-core/src/value/: functions.rs  generator.rs  io.rs  methods.rs  mod.rs  structs.rs
crates/blueprint-engine-core/src/value/methods/: dict.rs  list.rs  mod.rs  set.rs  string.rs
crates/blueprint-engine-eval/: Cargo.toml
crates/blueprint-engine-eval/src/: checker.rs  eval.rs  lib.rs  scope.rs
crates/blueprint-engine-eval/src/eval/: assignment.rs  comprehension.rs  expr.rs  functions.rs  mod.rs  ops.rs  pattern.rs  stmt.rs  types.rs
crates/blueprint-engine-eval/src/modules/: approval.rs  console.rs  crypto.rs  file.rs  http.rs  json.rs  jwt.rs  mod.rs  parallel.rs  process.rs  random.rs  redact.rs  regex.rs  registry.rs  runtime.rs  socket.rs  task.rs  time.rs  triggers.rs  websocket.rs
crates/blueprint-engine-eval/src/modules/builtins/: iterators.rs  math.rs  mod.rs  types.rs
crates/blueprint-engine-eval/src/natives/: crypto.rs  encoding.rs  file.rs  http.rs  mod.rs  process.rs  random.rs  regex.rs  socket.rs  uuid.rs  websocket.rs
crates/blueprint-engine-eval/src/natives/builtins/: control.rs  introspection.rs  iterators.rs  mod.rs  types.rs
crates/blueprint-engine-parser/: Cargo.toml
crates/blueprint-engine-parser/src/: lib.rs
crates/blueprint-registry/: Cargo.toml
crates/blueprint-registry/examples/: blueprint.toml
crates/blueprint-registry/src/: api.rs  auth.rs  error.rs  html.rs  main.rs  manifest.rs  models.rs
crates/blueprint_cli/: Cargo.toml
crates/blueprint_cli/src/: args.rs  callgraph.rs  main.rs  runner.rs  workspace.rs
crates/blueprint_cli/src/runner/: mod.rs  package.rs  publish.rs  repl.rs
crates/blueprint_core/: Cargo.toml
crates/blueprint_core/src/: error.rs  lib.rs  value.rs
crates/blueprint_eval/: Cargo.toml
crates/blueprint_eval/src/: checker.rs  eval.rs  lib.rs  scope.rs
crates/blueprint_eval/src/natives/: approval.rs  builtins.rs  console.rs  crypto.rs  file.rs  generator.rs  http.rs  json.rs  jwt.rs  mod.rs  parallel.rs  process.rs  redact.rs  task.rs  time.rs  triggers.rs  websocket.rs
crates/blueprint_parser/: Cargo.toml
crates/blueprint_parser/src/: lib.rs
crates/common/src/: op.rs  schema.rs
crates/generator/src/: resolver.rs
crates/generator/src/starlark/: generator.rs
crates/interpreter/src/: executor.rs
examples/: collections.star  control_flow.star  data_transform.star  file_operations.star  file_ops.star  functions.star  gcp_gcs.star  hello.star  http_request.star  json_example.star  json_processing.star  parallel_io.star  process.star  shell_command.star  strings.star  task_timeout.star  test_aws.bp  test_gcp.bp  test_stdlib.bp  time_example.star  ws_benchmark.bp  ws_echo_test.bp
examples/basics/: 01_hello_world.bp  02_variables_and_types.bp  03_functions.bp  04_control_flow.bp  05_strings.bp
examples/generators/: 01_basic_generators.bp  02_lazy_map_filter.bp  03_iter_and_enumerate.bp
examples/http/: 01_basic_requests.bp  02_streaming.bp  03_json_api.bp
examples/parallel/: 01_basic_parallel.bp  02_parallel_websocket.bp
examples/stdlib/: 01_aws_s3.bp  02_gcp_gcs.bp  03_llm_agent.bp
examples/triggers/: 01_interval.bp  interval_test.bp
examples/websocket/: 01_echo_server.bp  02_chat_server.bp  03_multiple_clients.bp  04_stress_test.bp  05_benchmark.bp
examples_manual/: agent_tools.bp  http_server_test.bp  websocket_test.bp
stdlib/: automation.bp  aws.bp  banking.bp  bp.star  communication.bp  crm.bp  devtools.bp  ecommerce.bp  gcp.bp  hr.bp  llm.bp  net.star  observability.bp  payments.bp  pm.bp  productivity.bp  redis.bp  search.bp  social.bp  sync.star  time.star  util.star  vectordb.bp
