[workspace]
members = [
    "crates/blueprint_core",
    "crates/blueprint_parser",
    "crates/blueprint_eval",
    "crates/blueprint_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
starlark = "0.13"
starlark_syntax = "0.13"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
rustyline = "14"
regex = "1.10"
once_cell = "1.19"
axum = "0.7"

blueprint_core = { path = "crates/blueprint_core" }
blueprint_parser = { path = "crates/blueprint_parser" }
blueprint_eval = { path = "crates/blueprint_eval" }
