[workspace]
members = [
    "crates/blueprint-engine-core",
    "crates/blueprint-engine-parser",
    "crates/blueprint-engine-eval",
    "crates/blueprint_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
blueprint-starlark = { path = "../blueprint-starlark/starlark" }
blueprint-starlark-syntax = { path = "../blueprint-starlark/starlark_syntax" }
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
rustyline = "14"
regex = "1.10"
once_cell = "1.19"
axum = "0.7"

blueprint-engine-core = { path = "crates/blueprint-engine-core" }
blueprint-engine-parser = { path = "crates/blueprint-engine-parser" }
blueprint-engine-eval = { path = "crates/blueprint-engine-eval" }
