[workspace]
members = [
    "crates/blueprint-engine-core",
    "crates/blueprint-engine-parser",
    "crates/blueprint-engine-eval",
    "crates/blueprint_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/blueprint"

[workspace.dependencies]
blueprint-starlark = "0.13.1"
blueprint-starlark-syntax = "0.13.2"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
rustyline = "14"
regex = "1.10"
once_cell = "1.19"
axum = "0.7"

blueprint-engine-core = { version = "0.1.0", path = "crates/blueprint-engine-core" }
blueprint-engine-parser = { version = "0.1.0", path = "crates/blueprint-engine-parser" }
blueprint-engine-eval = { version = "0.1.0", path = "crates/blueprint-engine-eval" }
