[package]
name = "blueprint-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and errors for Blueprint3"

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
glob.workspace = true
indexmap = "2"
