[package]
name = "blueprint-engine-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async evaluator for Blueprint3"

[dependencies]
blueprint-engine-core.workspace = true
blueprint-engine-parser.workspace = true
blueprint-starlark-syntax.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "fs", "process", "io-std", "io-util", "time", "net"] }
reqwest = { workspace = true }
glob.workspace = true
serde_json.workspace = true
serde.workspace = true
regex.workspace = true
once_cell.workspace = true
async-recursion = "1.0"
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
axum = { version = "0.7", features = ["ws"] }
tokio-cron-scheduler = "0.13"
uuid = { version = "1.0", features = ["v4", "v7"] }
chrono = "0.4"
lazy_static = "1.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
indexmap = "2"
percent-encoding = "2.3"
rand = "0.8"
subtle = "2.5"
