[package]
name = "blueprint_eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async evaluator for Blueprint3"

[dependencies]
blueprint_core.workspace = true
blueprint_parser.workspace = true
starlark_syntax.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "fs", "process", "io-std", "io-util", "time"] }
reqwest = { workspace = true }
glob.workspace = true
serde_json.workspace = true
serde.workspace = true
async-recursion = "1.0"
