[package]
name = "blueprint_eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async evaluator for Blueprint3"

[dependencies]
blueprint_core.workspace = true
blueprint_parser.workspace = true
starlark_syntax.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "fs", "process", "io-std", "io-util", "time"] }
reqwest = { workspace = true }
glob.workspace = true
serde_json.workspace = true
serde.workspace = true
regex.workspace = true
once_cell.workspace = true
async-recursion = "1.0"
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
axum = { version = "0.7", features = ["ws"] }
tokio-cron-scheduler = "0.13"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
lazy_static = "1.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
indexmap = "2"
